styling up to hire us

--- a/index.html
+++ b/index.html
@@ -20,24 +20,25 @@
                     Who Fights for You?
                   </a>
                   <div class="btn-group" role="group" aria-label="Basic outlined example">
-                    <button type="button" class="btn btn-outline-light">HOME</button>
-                    <button type="button" class="btn btn-outline-light">ABOUT</button>
-                    <button type="button" class="btn btn-outline-light">FEATURE</button>
-                    <button type="button" class="btn btn-outline-light">TEAM</button>
-                    <button type="button" class="btn btn-outline-light">WHY US</button>
-                    <button type="button" class="btn btn-outline-light">FEEDBACK</button>
-                    <button type="button" class="btn btn-outline-light">FREE CONSULTATION</button>
-                    <button type="button" class="btn btn-outline-light">BLOG</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">HOME</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">ABOUT</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">FEATURE</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">TEAM</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">WHY US</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">FEEDBACK</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">FREE CONSULTATION</button>
+                    <button type="button" class="btn btn-outline-light navbarButton">BLOG</button>
                   </div>
                 </div>
               </nav>
               <div class= "headerParagraph">
                   <h1 class ="headerParagraphTitle">Who Fights For You?</h1>
                   <p class="headerParagraphContent">Whether you have been charged with a minor misdemeanor or a serious federal crime, you need and deserve persistent, unyielding, and compassionate legal service from a skilled professional.</p>
-                      <button class="freeConsultation"></button>
+                      <button type="button" class="btn btn-outline-warning freeConsultation"> FREE CONSULTATION</button>
               </div>
             </div>
               <div class="statBox">
+                <img class="statBoximg" src="/images/statBox.png">
 
               </div>
               <div class="about">
@@ -45,9 +46,9 @@
                       <img src="/images/team/team-4.png" alt="Man Standing with arms crossed">
                   </div>
                   <div class="aboutContent">
-                    <h3 class="aboutTitle">About Our Firm</h3>
+                    <h2 class="aboutTitle">About Our Firm</h2>
                     <hr>
-                    <p>We understand that the state seems to have endless resources at its disposal. We strive to do everything possible to help you achieve a favorable result despite what may feel like insurmountable odds. Our criminal defense attorney is here to guide you through one of the most difficult situations of your life.</p>
+                    <p class="aboutParagraph">We understand that the state seems to have endless resources at its disposal. We strive to do everything possible to help you achieve a favorable result despite what may feel like insurmountable odds. Our criminal defense attorney is here to guide you through one of the most difficult situations of your life.</p>
                     <br><br>
                     <img class ="aboutSignature" src="/images/background/signture.png">
                   </div>
@@ -57,35 +58,66 @@
               <div class="practice">
                   <h3 class="practiceTitle">Practice Areas</h3>
                 <br><br>
-                <p class="practiceParagraphContent"></p>
-                <hr>
+                <p class="practiceParagraphContent">We have experience in a range of criminal defense case types. We’re prepared to handle your case.</p>
+                <hr class="practiceBreak">
                 <div class="practiceServices">
-                <img><img><img><img><img><img>
+                <img class="practiceServicesimg" src="/images/practiceIcons.png">
             </div>
               </div>
               
             <div class="expert">
+              <div class="expertContent">
               <h3 class="expertTitle">Expert Attorneys</h3>
               <br><br>
-              <p class="expertParagraphContent"></p>
-              <hr>
-
-              <img>
-              <img>
-
+              <p class="expertParagraphContent">To succeed as a criminal defense attorney, one must be bold. One must be talented and knowledgeable, of course, but it also takes a level of commitment to truly protect a client’s interests in order to achieve the best result possible in every single case.</p>
+              <hr class="practiceBreak">
+            </div>
+            <div class="expertTeam">
+            <div class="expertMark">
+              <img src="/images/team/team-1.jpg">
+              <h4 class="expertName">Mark Smith</h4>
+              <p class="markJobTitle">Criminal Defence</p>
+              </div>
+              <div class="expertRyanPrintz">
+              <img src= "\images\team\team-2.jpg">
+              <h4 class="expertName">Ryan Printz</h4>
+              <p class="ryanJobTitle">DWI Lawyer
+              </p>
+              </div>
+              </div>
             </div>
 
             <div class="hire">
               <div class="hireImage">
-                <img>
               </div>
 
               <div class="hireContent">
                 <h3 class="hireTitle">Why Hire Us ?</h3>
-                <p></p>
-                <hr>
+                <p>Boldly Defending Your Best Interests</p>
+                <hr class="hireBreak">
                 <br><br>
-                <img><img><img><img>
+                <div class="hireAreas">
+                  <div>
+                <img src="/images/hireIcons/1MDIV6n.png">
+                <h5>Exclusive Areas</h5>
+                <p class="hireParagraphs">Focusing our practice on DWI defense and the representation of clients facing charges and investigations related to a range of criminal offenses throughout the Austin area, our attorneys are here for you.</p>
+                </div>
+                <div>
+                <img src="/images/hireIcons/4KRFvAC.png">
+                <h5>Group Of Lawyers</h5>
+                <p class="hireParagraphs">We are not afraid to fight for our clients, delivering the bold and straightforward representation that leads to successes both in and out of court.</p>
+                </div>
+                <div>
+                <img src="/images/hireIcons/Dr31txG.png">
+                <h5>Cases Results</h5>
+                <p class="hireParagraphs">Our clients’ needs come first, and we are relentless in our defense of your constitutional rights.</p>
+                </div>
+                <div>
+                <img src="/images/hireIcons/g9bvhvL.png">
+                <h5>Experts In Law</h5>
+                <p class="hireParagraphs">We understand what you are up against and are here to fight for you.</p>
+                </div>
+                </div>
               </div>
             </div>
 
