--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
               </div>
             </div>
               <div class="statBox">
-                <img class="statBoximg show-on-scroll" src="/images/statBox.png">
+                <img class="statBoximg show-on-scroll" src="images/statBox.png">
 
               </div>
               <div class="about" id="aboutSection">
                   <div class="aboutImage">
-                      <img src="/images/team/team-4.png" alt="Man Standing with arms crossed">
+                      <img src="images/team/team-4.png" alt="Man Standing with arms crossed">
                   </div>
                   <div class="aboutContent">
                     <h2 class="aboutTitle">About Our Firm</h2>
                     <hr>
                     <p class="aboutParagraph">We understand that the state seems to have endless resources at its disposal. We strive to do everything possible to help you achieve a favorable result despite what may feel like insurmountable odds. Our criminal defense attorney is here to guide you through one of the most difficult situations of your life.</p>
                     <br><br>
-                    <img class ="aboutSignature" src="/images/background/signture.png">
+                    <img class ="aboutSignature" src="images/background/signture.png">
                   </div>
 
               </div>
@@ -63,7 +63,7 @@
                 <p class="practiceParagraphContent">We have experience in a range of criminal defense case types. We’re prepared to handle your case.</p>
                 <hr class="practiceBreak">
                 <div class="practiceServices">
-                <img class="practiceServicesimg show-on-scroll" src="/images/practiceIcons.png">
+                <img class="practiceServicesimg show-on-scroll" src="images/practiceIcons.png">
             </div>
               </div>
               
@@ -76,12 +76,12 @@
             </div>
             <div class="expertTeam">
             <div class="expertMark">
-              <img src="/images/team/team-1.jpg">
+              <img src="images/team/team-1.jpg">
               <h4 class="expertName">Mark Smith</h4>
               <p class="markJobTitle">Criminal Defence</p>
               </div>
               <div class="expertRyanPrintz">
-              <img src= "\images\team\team-2.jpg">
+              <img src= "images/team/team-2.jpg">
               <h4 class="expertName">Ryan Printz</h4>
               <p class="ryanJobTitle">DWI Lawyer
               </p>
@@ -91,7 +91,7 @@
 
             <div class="hire" id="hireSection">
 
-                <img class="hireImage" src="/images/background/bg-1.jpg">
+                <img class="hireImage" src="images/background/bg-1.jpg">
               <!-- </div> -->
 
               <div class="hireContent">
@@ -104,24 +104,24 @@
                   </div>
                   <div class="w-100 d-none d-md-block"></div>
                 <div class="col-6 col-sm-4">
-                <img src="/images/hireIcons/1MDIV6n.png">
+                <img src="images/hireIcons/1MDIV6n.png">
                 <h5>Exclusive Areas</h5>
                 <p class="hireParagraphs">Focusing our practice on DWI defense and the representation of clients facing charges and investigations related to a range of criminal offenses throughout the Austin area, our attorneys are here for you.</p>
                 </div>
                 <div class="col-6 col-sm-4">
-                  <img src="/images/hireIcons/Dr31txG.png">
+                  <img src="images/hireIcons/Dr31txG.png">
                   <h5>Cases Results</h5>
                   <p class="hireParagraphs">Our clients’ needs come first, and we are relentless in our defense of your constitutional rights.</p>
                 </div>
                 <div class="w-100 d-none d-md-block"></div>
 
                 <div class="col-6 col-sm-4">
-                <img src="/images/hireIcons/4KRFvAC.png">
+                <img src="images/hireIcons/4KRFvAC.png">
                 <h5>Group Of Lawyers</h5>
                 <p class="hireParagraphs">We are not afraid to fight for our clients, delivering the bold and straightforward representation that leads to successes both in and out of court.</p>
                 </div>
                 <div class="col-6 col-sm-4">
-                <img src="/images/hireIcons/g9bvhvL.png">
+                <img src="images/hireIcons/g9bvhvL.png">
                 <h5>Experts In Law</h5>
                 <p class="hireParagraphs">We understand what you are up against and are here to fight for you.</p>
                 </div>
@@ -137,17 +137,17 @@
               <!-- Maybe use cards or flexbox for client reviews -->
               <div class="clientTestimonials">
               <div class="clientOne show-on-scroll">
-                <img src="\images\testimonial\1.png">
+                <img src="images/testimonial/1.png">
                 <p class="clientTestimonialsParagraphs font-italic font-weight-bold">“I feel that if it weren't for them I would have been heavily misguided and probably would not have made it through the system with the best possible outcome for me. 5 Stars for their service, generosity, and in making me feel like a top priority!”</p>
                 <h6 class= "font-weight-bold">- Gene Martin</h6>
                 </div>
                 <div class="clientTwo show-on-scroll">
-                  <img src="\images\testimonial\2.png">
+                  <img src="images/testimonial/2.png">
                   <p class="clientTestimonialsParagraphs font-italic font-weight-bold">“I would love to add my thanks and heart felt appreciation for the help that your law firm provided me. Before I met you guys my situation looked very bleak and quite honestly your dedication to my case really carried over this past year and the reward was not only one felony dismissal but two.”</p>
                   <h6 class= "font-weight-bold">- Maya Jonson</h6>
                   </div>
                   <div class="clientThree show-on-scroll">
-                    <img src="\images\testimonial\3.png">
+                    <img src="images/testimonial/3.png">
                     <p class="clientTestimonialsParagraphs font-italic font-weight-bold">“Ended up going to trial for a DWI and got all 6 jurors to agree on a not guilty verdict. Highly recommended!! They will truly fight for you because they care for you.”</p>
                     <h6 class= "font-weight-bold">- Mark Smith</h6>
                   </div>
@@ -207,9 +207,9 @@
               </div>
               <div class="blogPosts col">
                 <h5 class="blogContact">Blog Posts</h5>
-                <img style="padding-bottom: 30px;" src="\images\blog\thumb\1.jpg"><span class="clearfix" style="padding-left: 15px;">Four ways to cheer yourself up on the Blue Monday!</span>
-                <img style="padding-bottom: 30px;" src="\images\blog\thumb\2.jpg"><span class="clearfix" style="padding-left: 15px;">Old cameras can capture images better than nowdays camera!</span>
-                <img style="padding-bottom: 30px;" src="\images\blog\thumb\3.jpg"><span style="padding-left: 15px;">Four ways to cheer yourself up on the Blue Monday!</span>
+                <img style="padding-bottom: 30px;" src="images/blog/thumb/1.jpg"><span class="clearfix" style="padding-left: 15px;">Four ways to cheer yourself up on the Blue Monday!</span>
+                <img style="padding-bottom: 30px;" src="images/blog/thumb/2.jpg"><span class="clearfix" style="padding-left: 15px;">Old cameras can capture images better than nowdays camera!</span>
+                <img style="padding-bottom: 30px;" src="images/blog/thumb/3.jpg"><span style="padding-left: 15px;">Four ways to cheer yourself up on the Blue Monday!</span>
               </div>
               <div class="getInTouch col">
                 <h5 class="blogContact">Get In Touch</h5>
