--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     Who Fights for You?
                   </a>
                   <div class="btn-group" role="group" aria-label="Basic outlined example">
-                    <a href="/index.html"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">HOME</button></a>
+                    <a href="index.html"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">HOME</button></a>
                     <a href="#aboutSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">ABOUT</button></a>
                     <a href="#practiceSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">FEATURE</button></a>
                     <a href="#expertSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">TEAM</button></a>
