--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <main>
-        <div class="header container-md" id="homeSection">
+        <div class="header container-fluid" id="homeSection">
             <nav class="navbar container-fluid navbar-light bg-light header">
                 <div class="navbarContent container-fluid">
                   <a class="navbar-brand" href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bank" viewBox="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
                       <path d="M8 .95 14.61 4h.89a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v7a.5.5 0 0 1 .485.379l.5 2A.5.5 0 0 1 15.5 17H.5a.5.5 0 0 1-.485-.621l.5-2A.5.5 0 0 1 1 14V7H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 4h.89L8 .95zM3.776 4h8.447L8 2.05 3.776 4zM2 7v7h1V7H2zm2 0v7h2.5V7H4zm3.5 0v7h1V7h-1zm2 0v7H12V7H9.5zM13 7v7h1V7h-1zm2-1V5H1v1h14zm-.39 9H1.39l-.25 1h13.72l-.25-1z"/>
                     </svg>
                     Who Fights for You?
@@ -95,7 +95,7 @@
               <!-- </div> -->
 
               <div class="hireContent">
-                <div class="hireAreas row">
+                <div class="hireAreas ">
                   <div class="col-9">
                     <h3 class="hireTitle">Why Hire Us ?</h3>
                     <p>Boldly Defending Your Best Interests</p>
@@ -156,7 +156,6 @@
 
             <div class="consultation" id="consultationSection">
 
-                <div class="consultationContent">
                 <div class="consultationForm">
                   <h3 class="consultationTitle">Free Consultation</h3>
                 <p class="consultationParagraphContent">We Have Offices in Austin & Georgetown.</p>
@@ -193,14 +192,13 @@
                   <button type="submit" class="btn btn-warning sendRequest">SEND REQUEST</button>
                 </form>
               </div>
-            </div>
                 
                 <!-- <div class="consultationImageContainer"> -->
                   <img class="consultationImage" src="images/background/bg-2.jpg">
                 <!-- </div> -->
             </div>
             
-            <div class="additionalInfo container-md">
+            <div class="additionalInfo container-fluid">
               <div class="row additionalInfoContent">
               <div class="infoParagraph col-sm-4">
                 <p>The information on this website is for general information purposes only. Nothing on this site should be taken as legal advice for any individual case or situation. This information is not intended to create, and receipt or viewing does not constitute, an attorney-client relationship.</p>
@@ -226,10 +224,10 @@
                 </svg> needhelp@whofightsforyou.com</a>
               </div>
               </div>
-              <footer>
-                <p>© 2021, All Rights Reserved.</p>
-              </footer>
             </div>
+            <footer class="container-fluid">
+              <p>© 2021, All Rights Reserved.</p>
+            </footer>
 
 
 
