--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,7 +22,10 @@
                     </svg>
                     Who Fights for You?
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic outlined example">
+                  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                  </a>
+                  <div class="btn-group" id="btn-group" role="group" aria-label="Basic outlined example">
                     <a href="index.html"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">HOME</button></a>
                     <a href="#aboutSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">ABOUT</button></a>
                     <a href="#practiceSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">FEATURE</button></a>
