background image tweaks v4

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <div class="header container-fluid" id="homeSection">
-            <nav class="navbar container-fluid navbar-light bg-light header">
+            <nav class="navbar container-fluid navbar-light">
                 <div class="navbarContent container-fluid">
                   <a class="navbar-brand" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bank" viewBox="0 0 16 16">
