finishing blog page

--- a/blogPage/index.html
+++ b/blogPage/index.html
@@ -13,9 +13,9 @@
     <div class="header container-fluid">
         <nav class="navbar navbarContent navbar-light container-fluid">
             <div class="btn-group" id="btn-group" role="group" aria-label="Basic outlined example">
-                <a href=""><button type="button" class="btn btn-outline-light navbarButton">Home</button></a>
-                <a href=""><button type="button" class="btn btn-outline-light navbarButton">Blog</button></a>
-                <a href=""><button type="button" class="btn btn-outline-light navbarButton">Contact</button></a>
+                <a href="../index.html"><button type="button" class="btn btn-outline-light navbarButton">Home</button></a>
+                <a href="#blogSection"><button type="button" class="btn btn-outline-light navbarButton">Blog</button></a>
+                <a href="#contact"><button type="button" class="btn btn-outline-light navbarButton">Contact</button></a>
             </div>
           </nav>
           <div class= "headerParagraph">
@@ -28,7 +28,7 @@
             </nav>
         </div>
         </div>
-        <div class="blog container-fluid row">
+        <div class="blog container-fluid row" id="blogSection">
             <div class="blogPost col">
                 <img class="blogImages" src="../images/blog/standard/1.jpg">
                 <p class="blogTitle"><small class="text-muted">Jan 20, 2017</small></p>
@@ -96,9 +96,9 @@
             </ul>
           </nav>
 
-        <div class="additionalInfo container-fluid">
+        <div class="additionalInfo container-fluid" id="contact">
             <div class="row additionalInfoContent">
-            <div class="infoParagraph col-sm-4">
+            <div class="infoParagraph col">
               <p>The information on this website is for general information purposes only. Nothing on this site should be taken as legal advice for any individual case or situation. This information is not intended to create, and receipt or viewing does not constitute, an attorney-client relationship.</p>
             </div>
             <div class="blogPosts col">
