--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="#hireSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">WHY US</button></a>
                     <a href="#clientSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">FEEDBACK</button></a>
                     <a href="#consultationSection"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">FREE CONSULTATION</button></a>
-                    <button type="button" class="btn btn-outline-light navbarButton font-weight-bold">BLOG</button>
+                    <a href="./blogPage/index.html"><button type="button" class="btn btn-outline-light navbarButton font-weight-bold">BLOG</button></a>
                   </div>
                 </div>
               </nav>
