--- a/results.html
+++ b/results.html
@@ -15,7 +15,7 @@
 </html>
 <script>
 
-    fetch('./Routers/posts')
+    fetch('../posts')
     .then(
         function(response) {
         if (response.status !== 200) {
