--- a/public/results.html
+++ b/public/results.html
@@ -22,7 +22,7 @@ function append(parent, el) {
 }
 
   const ul = document.getElementById('blogs');
-  fetch('../posts/getAll')
+  fetch('https://legal-mvp.herokuapp.com/posts/getAll/')
     .then(
       function(response){
         console.log( "first response ", response);
